<resources>
    <string name="app_name">MenuDroid-Server</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="table1">1</string>
    <string name="table2">2</string>
    <string name="table3">3</string>
    <string name="table4">4</string>
    <string name="table5">5</string>
    <string name="table6">6</string>


    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>

</resources>
